tengo q hacer q el service actualice el stock no un set